--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
   --Very-dark-blue: hsl(212, 21%, 14%);
   --Dark-grayish-blue: hsl(228, 12%, 48%);
   --White: hsl(0, 0%, 100%);
+
+  --ff-mont: Montserrat;
 }
 
 * {
@@ -16,7 +18,7 @@
 }
 
 body {
-  font-family: Fraunces, Montserrat, sans-serif;
+  font-family: Fraunces, sans-serif;
   font-size: 16px;
   background-color: var(--Cream);
   display: grid;
@@ -26,10 +28,9 @@ body {
 
 .container {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
-  width: 500px;
-  border-radius: 12px;
+  width: 31.25rem;
+  border-radius: 0.75rem;
   overflow: hidden;
   background-color: var(--White);
 }
@@ -42,9 +43,10 @@ body {
     width: 100%;
     height: 100%;
 }
+
 .right {
   flex: 50%;
-  padding: 20px;
+  padding: 1.25rem;
 }
 
 .title {
@@ -56,20 +58,22 @@ body {
 }
 
 h1 {
-  padding: 10px 0;
+  padding: 0.625rem 0;
   line-height: 0.9em;
   color: var(--Very-dark-blue);
 }
 
 p {
+  font-family: var(--ff-mont);
+  font-size: .8rem;
   color: var(--Dark-grayish-blue);
-  margin: 10px 0 30px 0;
+  margin: 0.625rem 0 1.875rem 0;
 }
 
 .current-price {
   color: var(--Dark-cyan);
   font-size: 2em;
-  margin-left: 3px;
+  margin-left: 0.1875rem;
 }
 
 .price {
@@ -77,20 +81,22 @@ p {
 }
 
 .old-price {
+  font-family: var(--ff-mont);
   color: var(--Dark-grayish-blue);
   text-decoration: line-through;
-  margin-left: 30px;
+  margin-left: 1.875rem;
   font-size: 0.8em;
 }
 
 button {
+  font-family: var(--ff-mont);
   background-color: var(--Dark-cyan);
   color: var(--White);
-  font-size: 1.1em;
+  font-size: .8em;
   border-style: none;
   width: 100%;
-  height: 40px;
-  margin-top: 15px;
+  height: 2.5rem;
+  margin-top: 0.9375rem;
   border-radius: 8px;
   text-align: center;
   cursor: pointer;
@@ -108,24 +114,24 @@ button:hover {
 
 button img {
   position: absolute;
-  top: 10px;
-  left: 10px;
+  top: 12px;
+  left: 14px;
   transition: 0.5s;
 }
 
 button:hover img {
-  top: 10px;
+  top: 12px;
   left: 45px;
 }
 
 button:hover {
-  padding-left: 12px;
+  padding-left: 0.75rem;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 31.25rem) {
   .container {
-    width: 320px;
-    min-height: 300px;
+    width: 19rem;
+    min-height: 18.75rem;
     display: flex;
     flex-direction: column;
     margin-top: 0;
